--- a/springBoot-main/gs-serving-web-content-main/complete/src/main/resources/static/index.html
+++ b/springBoot-main/gs-serving-web-content-main/complete/src/main/resources/static/index.html
@@ -1,10 +1,63 @@
-<!DOCTYPE HTML>
-<html>
-<head> 
-    <title>Getting Started: Serving Web Content</title> 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trang Chủ</title>
+    <style>
+        body {
+            background: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-family: 'Segoe UI', Arial, sans-serif;
+        }
+        .container {
+            background: #fff;
+            padding: 36px 32px 28px 32px;
+            border-radius: 18px;
+            box-shadow: 0 4px 24px rgba(0,0,0,0.10);
+            text-align: center;
+            max-width: 350px;
+            width: 100%;
+        }
+        h2 {
+            color: #2980ef;
+            margin-bottom: 35px;
+            letter-spacing: 1px;
+        }
+        .btn-group {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+        }
+        button {
+            background: linear-gradient(90deg, #2980ef 0%, #6dd5fa 100%);
+            color: #fff;
+            border: none;
+            border-radius: 8px;
+            padding: 13px 0;
+            font-size: 1.1rem;
+            font-weight: bold;
+            cursor: pointer;
+            box-shadow: 0 2px 8px rgba(41,128,239,0.08);
+            transition: background 0.2s, transform 0.2s;
+        }
+        button:hover {
+            background: linear-gradient(90deg, #6dd5fa 0%, #2980ef 100%);
+            transform: translateY(-2px) scale(1.03);
+        }
+    </style>
 </head>
 <body>
-    <p>Get your greeting <a href="/greeting">here</a></p>
+    <div class="container">
+        <h2>Lạc Trong Rừng Cấm</h2>
+
+        <div class="btn-group">
+            <button onclick="window.location.href='/login'">Đăng Nhập</button>
+            <button onclick="window.location.href='/register'">Đăng Ký</button>
+        </div>
+    </div>
 </body>
 </html>
